Thu Oct 21 11:56:04 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * TAO_IDL/be/be_visitor_attr_assign.cpp:
        * TAO_IDL/be/be_visitor_attr_return.cpp:
          Removed trailing whitespaces.

        * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
        * TAO_IDL/be/be_visitor_component/executor_exs_attr_init.cpp:
        * TAO_IDL/be/be_visitor_component/executor_private_exh.cpp:
        * TAO_IDL/be/be_visitor_component_scope.cpp:
        * TAO_IDL/be/be_visitor_operation/operation_ch.cpp:
          Reduced the amount of whitespaces in the generated code.

Thu Oct 21 11:06:36 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * TAO_IDL/be/be_visitor_component/executor_exs.cpp:
        * TAO_IDL/be/be_visitor_component_scope.cpp:
          Removed some more whitespaces from the generated code.

Thu Oct 21 10:26:18 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * TAO_IDL/be/be_visitor_component/executor_exs.cpp:
          Removed whitespaces from generated code.

Thu Oct 21 08:01:49 UTC 2010  Martin Corino  <mcorinom@remedy.nl>

        * tests/Bug_3919_Regression/Test.idl:
        * tests/Bug_3919_Regression/client.cpp:
          Changes to get rid of wchar problems.

Wed Oct 20 19:50:32 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_component/facet_private_exh.cpp:
        * TAO_IDL/be_include/be_visitor_component/facet_private_exh.h:

          Renamed these files (and visitor classes) to the entries below.

        * TAO_IDL/be/be_visitor_component/executor_private_exh.cpp:
        * TAO_IDL/be_include/be_visitor_component/executor_private_exh.h:

          Renamed these files (and visitor classes) from the entries above.

        * TAO_IDL/be/be_visitor_attr_setarg_type.cpp:
        * TAO_IDL/be/be_visitor_member_type_decl.cpp:
        * TAO_IDL/be/be_visitor_attr_return.cpp:
        * TAO_IDL/be/be_visitor_attr_assign.cpp:
        * TAO_IDL/be/be_visitor_component/executor_exs_attr_init.cpp: