@@ -33,7 +33,7 @@ be_visitor_operation_ch::visit_operation (be_operation *node)
   this->ctx_->node (node);
 
   // Every operation is declared virtual in the client code.
-  *os << be_nl << be_nl
+  *os << be_uidt << be_uidt_nl << be_idt << be_idt_nl
       << "virtual ";
 
   // STEP I: generate the return type.
@@ -64,7 +64,7 @@ be_visitor_operation_ch::visit_operation (be_operation *node)
   // STEP 2: generate the operation name. The port prefix should
   // be an empty string except for operations from attributes
   // defined in a porttype.
-  *os << be_nl << node->local_name ();
+  *os << " " << node->local_name ();
 
   // STEP 3: generate the argument list with the appropriate mapping. For these
   // we grab a visitor that generates the parameter listing.
