@@ -1,3 +1,11 @@
+Thu Oct 21 12:32:06 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
+
+        * TAO_IDL/be/be_visitor_operation/arglist.cpp:
+        * TAO_IDL/be/be_visitor_operation/operation_ch.cpp:
+          Reduced the amount of whitespaces in the generated code.
+
 Thu Oct 21 11:56:04 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * TAO_IDL/be/be_visitor_attr_assign.cpp:
